# SeetaFaceEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SeetaFaceEngineConfig.cmake.in
FaceAlignment/: CMakeLists.txt  README.md
FaceAlignment/examples/: examples.sln
FaceAlignment/examples/FaceAlignment/: FaceAlignment.vcxproj  FaceAlignment.vcxproj.filters
FaceAlignment/examples/android/jni/: Android.mk  Application.mk
FaceAlignment/examples/examples/: FaceDetection.lib  examples.vcxproj  examples.vcxproj.filters
FaceAlignment/include/: cfan.h  common.h  face_alignment.h  sift.h
FaceAlignment/src/: cfan.cpp  face_alignment.cpp  sift.cpp
FaceAlignment/src/test/: face_alignment_test.cpp
FaceDetection/: CMakeLists.txt  README.md
FaceDetection/examples/: examples.sln
FaceDetection/examples/FaceDetection/: FaceDetection.vcxproj  FaceDetection.vcxproj.filters
FaceDetection/examples/android/jni/: Android.mk  Application.mk
FaceDetection/examples/examples/: examples.vcxproj  examples.vcxproj.filters
FaceDetection/include/: classifier.h  common.h  detector.h  face_detection.h  feature_map.h  fust.h  model_reader.h
FaceDetection/include/classifier/: lab_boosted_classifier.h  mlp.h  surf_mlp.h
FaceDetection/include/feat/: lab_feature_map.h  surf_feature_map.h
FaceDetection/include/io/: lab_boost_model_reader.h  surf_mlp_model_reader.h
FaceDetection/include/util/: image_pyramid.h  math_func.h  nms.h
FaceDetection/src/: face_detection.cpp  fust.cpp
FaceDetection/src/classifier/: lab_boosted_classifier.cpp  mlp.cpp  surf_mlp.cpp
FaceDetection/src/feat/: lab_feature_map.cpp  surf_feature_map.cpp
FaceDetection/src/io/: lab_boost_model_reader.cpp  surf_mlp_model_reader.cpp
FaceDetection/src/test/: facedetection_test.cpp
FaceDetection/src/util/: image_pyramid.cpp  nms.cpp
FaceIdentification/: CMakeLists.txt  README.md
FaceIdentification/data/test_face_recognizer/: crop_file_list.txt  crop_sdk_file_list.txt  test_file_list.txt
FaceIdentification/examples/: examples.sln
FaceIdentification/examples/Identification/: Identification.vcxproj  Identification.vcxproj.filters
FaceIdentification/examples/Tester/: Tester.vcxproj  Tester.vcxproj.filters
FaceIdentification/examples/android/jni/: Android.mk  Application.mk
FaceIdentification/include/: aligner.h  bias_adder_net.h  blob.h  bn_net.h  common.h  common_net.h  conv_net.h  eltwise_net.h  face_identification.h  hyper_param.h  inner_product_net.h  log.h  math_functions.h  max_pooling_net.h  net.h  net_factory.h  pad_net.h  recognizer.h  spatial_transform_net.h  tform_maker_net.h  viplnet.h
FaceIdentification/src/: CMakeLists.txt  bias_adder_net.cpp  blob.cpp  bn_net.cpp  common_net.cpp  conv_net.cpp  eltwise_net.cpp  inner_product_net.cpp  log.cpp  math_functions.cpp  max_pooling_net.cpp  net.cpp  pad_net.cpp  spatial_transform_net.cpp  tform_maker_net.cpp
FaceIdentification/src/test/: CMakeLists.txt  test_face_recognizer.cpp  test_face_verification.cpp
FaceIdentification/tools/: aligner.cpp  face_identification.cpp
doc/: SeetaFace配置说明文档.docx
examples/: examples.sln
examples/Alignment/: Alignment.vcxproj  Alignment.vcxproj.filters
examples/AlignmentTester/: AlignmentTester.vcxproj  AlignmentTester.vcxproj.filters
examples/Detection/: Detection.vcxproj  Detection.vcxproj.filters
examples/DetectionTester/: DetectionTester.vcxproj  DetectionTester.vcxproj.filters
examples/Identification/: Identification.vcxproj  Identification.vcxproj.filters
examples/IdentificationTester/: IdentificationTester.vcxproj  IdentificationTester.vcxproj.filters
examples/Tester/: Tester.vcxproj  Tester.vcxproj.filters
examples/VerificationTester/: VerificationTester.vcxproj  VerificationTester.vcxproj.filters
